jpress v2.0-rc.9:
新增：微信公众号文章导入功能，支持公众号图片附件直接本地化
新增：后台登录新增需要输入验证码的功能，防止暴力密码猜解
新增：插件的安装和卸载、支持插件调用动态库 .dll 和 .so 文件，支持动态库的卸载功能
新增：插件支持 WEB-INF 目录，放在 WEB-INF 的内容禁止访问
新增：SmartField 新增对 datetimepicker 渲染的支持，方便对时间的选择
新增：ControllerBase 新增 Map<String, String> getParas() 方法，用于读取参数列表
新增：后台 OptionController 新增直接删除某个key和更新某个key的方法
优化：从 WordPress 导入的文章，会实时提交百度搜索引擎
优化：CheckedIfDirective 和 SelectedIfDirective 指令
优化：MaxLengthDirective 指令，当出现错误是给出错误行号，方便排查
优化：在某些情况下通过后台登录后，会显示404，需要刷新下才行的问题
优化：当在后台编辑模板文件，但是没有写入权限时，给出具体的错误信息
修复：AddonHandlerProcesser 对读取 html 拦截失效的问题
修复：JPressRenderFactory 在某些极端情况先会出现空指针的问题
修复：当附件在没有设置 suffix 字段时，无法正确识别文件类型的问题
修复：当在后台配置微信公众号信息，再次修改后由于缓存原因修改失效的问题
修复：在二级目录下，datepicker无法使用的问题



jpress v2.0-rc.8:
新增：新增插件代码生成直接生成后台UI的功能
新增：超级管理员可以在后台修改任何人的密码的功能，用于帮助用户人工的方式找回密码
新增：在ControllerBase里新增render404If方法，是代码更加简洁
优化：优化 ImageUtils 的部分代码
优化：优化插件 AddonManager 的部分逻辑代码，更加易于理解和阅读
优化：优化Sitemap的代码逻辑
优化：完善markdown编辑器滚动条默认位置设置，感谢 [@whoismy8023](https://gitee.com/whoismy8023)
优化：优化docker-compose启动JPress的时候，当配置模板映射时无法使用系统内置的模板的问题
优化：升级内核JFinal到3.8和Jboot到2.0.6 最新版本
优化：优化 CKeditor 插入图片时，当图片过大会导致文字被挤压没有良好文字编写体验的问题
优化：优化 window 下的JPress启动文件 jpress.bat 的提示文字错误的问题
修复：修复在JPress后台升级插件在某些情况下无法正确升级的问题
修复：修复ModuleUIGenerator用于生成UI代码时，会导致部分数据无法正确提交的问题
修复：修复模板在templates的多级目录下，无法正常加载的问题
修复：修复文章更新状态的时候，前台由于缓存的原因无法及时更新的问题
修复：修复Sitemap只有重启JPress才生效，重启后新增文章Sitemap无法及时更新的问题
修复：修复Seo的百度实时提交不带域名导致提交的URL错误的问题
修复：修复子目录的sitmap渲染可能出现空指针异常的问题
修复：修复解决SmartField addAttr属性不生效的问题，感谢 [@ZJWave](https://gitee.com/zjwave)
修复：在window下，当用户通过个人中心上传头像后，无法在前台渲染的问题
修复：自定义ContextPath场景下，后台菜单权限逻辑错误问题
修复：通过后台的标签模块新增标签的时候，可以新增重复标签的问题
修复：当文章有多个标签的时候，查询相关文章sql出错的问题，感谢 [@whoismy8023](https://gitee.com/whoismy8023)



jpress v2.0-rc.7:
新增：robots.txt 的支持
新增：sitemap 功能
新增：baidu 和 Google 的自动 ping 提交的功能
新增：baidu seo 自动实时 push 和 update 的功能
新增：用户登录成功的跳转配置
新增：#hasAddon() 指令 和 hasAddon() 模板方法，用于对当前应用是否启用了某个 JPress 插件。
优化：优化 jpress 数据表结构，使其更加合理。
优化：优化 Module 二次开发的代码生成器 ModuleGenerator
优化：升级 JFinal 到最新版本 3.7，升级 Jboot 到最新版本 2.0.3