@@ -51,6 +51,7 @@ public class ArticlePageDirective extends JbootDirectiveBase {
 
         int page = controller.getParaToInt(1, 1);
         int pageSize = getParaToInt("pageSize", scope, 10);
+        String orderBy = getPara("orderBy", scope, "id desc");
 
         // 可以指定当前的分类ID
         Long categoryId = getParaToLong("categoryId", scope, 0L);
@@ -61,8 +62,8 @@ public class ArticlePageDirective extends JbootDirectiveBase {
         }
 
         Page<Article> articlePage = categoryId == 0
-                ? service.paginateInNormal(page, pageSize)
-                : service.paginateByCategoryIdInNormal(page, pageSize, categoryId, null);
+                ? service.paginateInNormal(page, pageSize, orderBy)
+                : service.paginateByCategoryIdInNormal(page, pageSize, categoryId, orderBy);
 
         scope.setGlobal("articlePage", articlePage);
         renderBody(env, scope, writer);
